examples/directed/director_with_route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: icproxy-director
spec:
  ports:
  - name: amqps
    port: 5671
    targetPort: 5671
  selector:
    application: icproxy-director
---
kind: Route
apiVersion: v1
metadata:
  name: icproxy-director
  labels:
    application: icproxy-director
spec:
  port:
    targetPort: amqps
  tls:
    termination: passthrough
  to:
    kind: Service
    name: icproxy-director
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: icproxy-director
  labels:
    application: icproxy-director
spec:
  replicas: 1
  selector:
    matchLabels:
      application: icproxy-director
  template:
    metadata:
      labels:
        application: icproxy-director
    spec:
      serviceAccountName: icproxy-deployer
      containers:
      - name: deployer
        image: quay.io/gordons/icproxy-deployer:directed
        imagePullPolicy: Always
        command:
        - node
        args:
        - /opt/app-root/bin/director.js
---
